--- a/styles/components/_checkout.scss
+++ b/styles/components/_checkout.scss
@@ -1,13 +1,13 @@
-#payment-form{
+#payment-form {
     background-color: #fff;
     padding: 2rem;
     border-radius: 0.4rem;
-    h1{
+    h1 {
         font-size: 2rem;
         font-weight: 500;
         margin-bottom: 2.4rem;
     }
-    button{
+    button {
         width: 100%;
         background-color: $primary-color;
         border-radius: 0.4rem;
@@ -29,93 +29,90 @@
     }
 }
 
-.checkout-row{
-    .right{
+.checkout-row {
+    .right {
         background-color: #fff;
         padding: 2rem;
         border-radius: 0.4rem;
-        h1{
+        h1 {
             font-size: 2rem;
             font-weight: 500;
-            border-bottom: 1px solid #CED4DA;
+            border-bottom: 1px solid #ced4da;
             padding-bottom: 2.4rem;
         }
 
-        p{
+        p {
             font-size: 1rem;
         }
-        .item-detail{
+        .item-detail {
             margin-top: 2.4rem;
-            .left{
-                .thumbnail-img{
-                    img{
-
+            .left {
+                .thumbnail-img {
+                    img {
                         border-radius: 0.4rem;
                     }
                 }
             }
-            .inner-right{
-                h2{
+            .inner-right {
+                h2 {
                     font-size: 1.6rem;
                     color: $primary-color;
                     font-weight: 500;
                 }
-                h3{
+                h3 {
                     font-size: 2rem;
                     font-weight: 600;
-                    color: #343A40;
+                    color: #343a40;
                 }
-                p{
+                p {
                     margin-bottom: 0.6rem;
                     font-size: 1.2rem;
                 }
-                .icon{
+                .icon {
                     margin-right: 0.4rem;
                 }
-                .location-icon{
-                    color: #FE5050;
+                .location-icon {
+                    color: #fe5050;
                 }
-                .calendar-icon{
-                    color: #F06700;
+                .calendar-icon {
+                    color: #f06700;
                 }
-                .clock-icon{
-                    color: #3EAEFF;
+                .clock-icon {
+                    color: #3eaeff;
                 }
             }
         }
-        .fee{
+        .fee {
             padding-bottom: 1rem;
-            p{
+            p {
                 margin: 0;
-                &:first-child{
+                &:first-child {
                     font-size: 1.2rem;
                 }
-                &:last-child{
+                &:last-child {
                     font-size: 1.4rem;
                     font-weight: 600;
                 }
             }
         }
-        .sub-total{
-            border-bottom: 1px solid #CED4DA;
+        .sub-total {
+            border-bottom: 1px solid #ced4da;
             margin-top: 2.4rem;
         }
-        .platform-fee{
+        .platform-fee {
             margin-top: 2rem;
-
         }
-        .tax{
-            border-bottom: 1px solid #CED4DA;
+        .tax {
+            border-bottom: 1px solid #ced4da;
             padding-bottom: 2.4rem;
         }
-        .grand-total{
+        .grand-total {
             margin-top: 1.6rem;
-            p{
+            p {
                 margin: 0;
                 font-size: 2rem;
                 color: $primary-color;
                 font-weight: 500;
-
             }
         }
     }
