--- a/styles/components/_exploreWithSlider.scss
+++ b/styles/components/_exploreWithSlider.scss
@@ -36,7 +36,7 @@
             box-shadow: 0px 4px 14px rgba(33, 29, 79, 0.1);
             background: rgba(255, 255, 255, 0.4);
             border-radius: 4px;
-            @include respond(xs){
+            @include respond(xs) {
                 height: 761.562px;
             }
 
@@ -60,11 +60,11 @@
                 p {
                     font: 500 1.6rem $poppins-font;
                     color: #495057;
-                    @include respond(xs){
+                    @include respond(xs) {
                         height: 150px;
                         overflow: hidden;
                         text-align: justify;
-                        padding-left: 19px;
+                        padding-left: 5px;
                     }
                 }
 
